<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="26sp"
            android:text="Lisensi Persetujuan Aplikasi"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_heavy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai1"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai2"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai3"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai4"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="26sp"
            android:text="@string/mengenai6"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_heavy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai7"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_heavy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenaiApache"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai8"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_heavy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai9"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenaiApache"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenaiEnd"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai10"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_heavy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai11"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenaiApache"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenaiEnd"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai12"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_heavy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai13"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai14"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai15"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/mengenai16"
            android:textIsSelectable="true"
            android:textColor="@color/fontC1"
            android:fontFamily="@font/national_regular"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>